--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -605,6 +605,7 @@ footer {
             overflow: visible;
             position: relative;
             width: calc(100% - 4rem);
+            margin-top: 3rem;
 
             p {
                 max-width: 100%;
