--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1007,6 +1007,10 @@
                 margin-bottom: 1rem;
             }
         }
+
+        @media only screen and (max-width: 480px) {
+            padding: 0 1.5rem;
+        }
     }
 }
 
